refactor: IdCodec/StudentConverterの責務整理とController/テストの追従
- IdCodecにUUID 16バイト長チェック責務を集約し、StudentConverter.encodeBase64はnull処理に専念
- StudentController/AdminStudentController/StudentConverterでのPK復号処理をdecodeUuidBytesOrThrowに統一
- StudentConverterTestのList#getFirst()をget(0)等に修正し、コンパイルエラーを解消
- IdCodecをモック前提としたテストコメント／テスト名に更新し、実装との整合性を確保
- ControllerTestBase/StudentConverter/IdCodecインターフェースにJavaDocコメントを追加し仕様を明文化